--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Volodymyr Tkachenko - resumeresume for job search</title>
+    <title>Volodymyr Tkachenko - resume for job search</title>
 </head>
 <body>
     <!--Main-->
