--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <!-- <ol class="projects-list">
                     <li class="projects-tittle"> -->
                         <span class="projects-link">
-                            <a href="https://volfx.github.io/" class="project-links">This resume on GitHub</a>
+                            <a href="https://volfx.github.io/" class="project-links">This resume (public on GitHub)</a>
                             ............................
                             <span class="projects-tittle">[</span> HTML5, CSS3 <span class="projects-tittle">]</span>
                         </span>
