--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
                     Contacts
                 </h3>
                 <div>
-                    
                     <p class="contactblock">
                         <img src="/img/telegram-app.png" alt="" class="contactdes">
                         <a href="https://t.me/vol_fx" class="contactlink" target="_blank"> vol_fx</a>
@@ -172,9 +171,8 @@
                     </p>
                     <p class="contactblock">
                         <img src="/img/mail.png" alt="" class="contactdes">
-                        <a href="maito:fixxxer0512@gmail.com" class="contactlink">fixxxer0512@gmail.com</a>
-                    </p>
-                               
+                        <a href="mailto:fixxxer0512@gmail.com" class="contactlink">fixxxer0512@gmail.com</a>
+                    </p>      
                 </div>
             </div>
             <!--Tech skills-->
