--- a/index.html
+++ b/index.html
@@ -182,29 +182,15 @@
                 </h3>
                 <ul class="skills-list">
                     <li class="skills-item">
-                        <span class="skills-text">HTML5</span>
-                    </li>
+                        <span class="skills-text">HTML5</span></li>
                     <li class="skills-item">
-                        <span class="skills-text">CSS3</span> 
-                    </li>
+                        <span class="skills-text">CSS3</span></li>
                     <li class="skills-item">
-                        <span class="skills-text">GIT</span> 
-                    </li>
+                        <span class="skills-text">GIT</span></li>
                     <li class="skills-item">
-                        <span class="skills-text">Figma</span> 
-                    </li>
+                        <span class="skills-text">Figma</span></li>
                     <li class="skills-item">
-                        <span class="skills-text">Corel DRAW</span> 
-                    </li>
-                    <!-- <li class="skills-item">
-                        <span class="skills-text">JavaScript</span>
-                    </li>
-                    <li class="skills-item">
-                        <span class="skills-text">React</span>
-                    </li>
-                    <li class="skills-item">
-                        <span class="skills-text">Node.js</span>       -->
-                    </li>
+                        <span class="skills-text">Corel DRAW</span></li>
                 </ul>
             </div>
             <!--Soft Skills-->
